[tool.poetry]
name = "allocation"
version = "0.0.1"
description = "Architectural Patterns"
authors = ["Rui Conti <ruiconti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.15"
pytest = "^5.4.1"
flake8 = "^3.7.9"
black = "^19.10b0"
tenacity = "^6.1.0"
requests = "^2.23.0"
mypy = "^0.770"
redis = "^3.4.1"
flask = "^1.1.1"
fastapi = "^0.52.0"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
